--- a/rfid/templates/rfid/detail-esp.html
+++ b/rfid/templates/rfid/detail-esp.html
@@ -4,17 +4,21 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 <br>
-<div class="container md-6 xl-12 sm-3" >
-    <a href="{% url "rfid:delete-esp" esp_name=esp_detail.unique_id %}"> <button class="btn btn-danger">Delete ESP</button></a>
-</div>
+
 <div class="container fluid">
 <b>Unique ID of Event : </b>{{ esp_detail.unique_id }}<br>
-<b>Created by : </b>{{ esp_detail.created_by }}<br>
-
-
+<b>Created by : </b>{{ esp_detail.user.username }}<br>
+<br>
+<form method="POST" action="{% url 'rfid:detail-esp' esp_name=esp_detail.unique_id %}">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <input type="submit" class="btn btn-info" value="submit" name="submit">
+</form>
+<br>
 <b>RFID list :</b><br>
 
 </div>
+
 <div class='container-fluid'>
     <table class="table">
         <thead class="thead-dark">
@@ -45,7 +49,9 @@
         </tbody>
       </table>
 </div>
-
+<div class="container md-6 xl-12 sm-3" >
+  <a href="{% url "rfid:delete-esp" esp_name=esp_detail.unique_id %}"> <button class="btn btn-danger">Delete ESP</button></a>
+</div>
 
 
 
