--- a/templates/snippets/navbar.html
+++ b/templates/snippets/navbar.html
@@ -1,25 +1,67 @@
-{% load static %}
-<nav class="navbar sticky-top fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{% url 'rfid:esp-list' %}">
-    <img src="{% static 'images/favicon.png' %%}" width="30" height="30" class="d-inline-block align-center" alt="">
-     <span class="navbar-brand mb-0 h1">RFID</span></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'rfid:esp-list' %}">List ESPs<span class="sr-only"></span></a>
-        </li>
-      <li class="nav-item">
-          <a class="nav-link" href="{% url 'rfid:create-esp' %}">Create ESP</a>
-        </li>
-        <li class="nav-item">
-          {% comment %} <a class="nav-link" href="{% url 'app:scan' %}">Scan</a> {% endcomment %}
-        </li>
-        
-         
-      </ul>
+{% load static %} {% url 'products:list-cbv' as home_url %} {% url
+'products:contact-us' as contact_url %} {% url 'products:logout' as logout_url
+%} {% url 'admin' as admin_url %} {% url 'products:login' as login_url %} {% url
+'products:signup' as signup_url %} {% url 'cart:cart-home' as cart_url %}
 
-  </nav>
+<nav class="navbar sticky-top fixed-top navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="{% url 'rfid:esp-list' %}">
+    <img
+      src="{% static 'images/favicon.png' %%}"
+      width="30"
+      height="30"
+      class="d-inline-block align-center"
+      alt=""
+    />
+    <span class="navbar-brand mb-0 h1">RFID</span></a
+  >
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'rfid:esp-list' %}"
+          >List ESPs<span class="sr-only"></span
+        ></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'rfid:create-esp' %}">Create ESP</a>
+      </li>
+    </ul>
+    <form
+      class="form my-2 my-lg-0"
+      method="GET"
+      action='{% url "rfid:search" %}'
+    >
+      <div class="input-group">
+        <input
+          
+          type="hidden"
+          name="event_pk"
+          value="{{ esp_detail.unique_id }}"
+        />
+
+        <input
+          class="form-control"
+          type="search"
+          name="q"
+          placeholder="Search"
+          aria-label="Search"
+          value="{{ request.GET.q }}"
+        />
+        <span class="insert-group-btn">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </span>
+      </div>
+    </form>
+  </div>
+</nav>
