--- a/templates/snippets/navbar.html
+++ b/templates/snippets/navbar.html
@@ -1,7 +1,4 @@
-{% load static %} {% url 'products:list-cbv' as home_url %} {% url
-'products:contact-us' as contact_url %} {% url 'products:logout' as logout_url
-%} {% url 'admin' as admin_url %} {% url 'products:login' as login_url %} {% url
-'products:signup' as signup_url %} {% url 'cart:cart-home' as cart_url %}
+{% load static %} 
 
 <nav class="navbar sticky-top fixed-top navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="{% url 'rfid:esp-list' %}">
@@ -37,31 +34,6 @@
         <a class="nav-link" href="{% url 'rfid:create-esp' %}">Create ESP</a>
       </li>
     </ul>
-    <form
-      class="form my-2 my-lg-0"
-      method="GET"
-      action='{% url "rfid:search" %}'
-    >
-      <div class="input-group">
-        <input
-          
-          type="hidden"
-          name="event_pk"
-          value="{{ esp_detail.unique_id }}"
-        />
-
-        <input
-          class="form-control"
-          type="search"
-          name="q"
-          placeholder="Search"
-          aria-label="Search"
-          value="{{ request.GET.q }}"
-        />
-        <span class="insert-group-btn">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </span>
-      </div>
-    </form>
+    
   </div>
 </nav>
