--- a/rfid/templates/rfid/detail-esp.html
+++ b/rfid/templates/rfid/detail-esp.html
@@ -32,7 +32,7 @@
       </div>
     </form>
 
-<b>Unique ID of Event : </b>{{ esp_detail.unique_id }}<br>
+<b>Unique ID of ESP : </b>{{ esp_detail.unique_id }}<br>
 <b>Created by : </b>{{ esp_detail.user.username }}<br>
 <br>
 <form method="POST" action="{% url 'rfid:detail-esp' esp_name=esp_detail.unique_id %}">
